deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doolittle-health
  labels:
    name: doolittle-health
    environment: production
